--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "zbar.wasm",
+  "name": "zbar.wasm-demo",
   "version": "0.0.0",
   "description": "A wasm build for C/C++ Zbar bar code scan library.",
-  "main": "index.js",
   "scripts": {
-    "build": "make",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,8 +20,7 @@
     "url": "https://github.com/samsam2310/zbar.wasm/issues"
   },
   "homepage": "https://github.com/samsam2310/zbar.wasm#readme",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -33,6 +30,9 @@
     "node-loader": "^0.6.0",
     "prettier": "^1.13.2",
     "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4"
-  }
+    "webpack-cli": "^2.1.4",
+    "copy-webpack-plugin": "^4.5.1",
+    "zbar.wasm": "0.0.1-rc-20180530174656"
+  },
+  "devDependencies": {}
 }
