--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "canvas": "^2.0.0-alpha.12",
+    "copy-webpack-plugin": "^4.5.1",
     "node-loader": "^0.6.0",
     "prettier": "^1.13.2",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4",
-    "copy-webpack-plugin": "^4.5.1",
-    "zbar.wasm": "0.0.1-rc-20180530174656"
+    "zbar.wasm": "^1.0.0"
   },
   "devDependencies": {}
 }
